Fix collapsed footer height

--- a/styles/sider.module.less
+++ b/styles/sider.module.less
@@ -88,6 +88,10 @@
     :global([role="menuitem"]) {
       padding-left: 14px !important;
     }
+
+    .footer {
+      height: 225px;
+    }
   }
 }
 
